--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/laundry-in-1.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>POS Warung Ali</h4>
+                <h4>Laundry In</h4>
                 <p>WEB</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/laundry-in-1.png" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
@@ -329,7 +329,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/pustaka-booking-3.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Pembayaran Sekolah</h4>
+                <h4>Pustaka Booking</h4>
                 <p>WEB</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/pustaka-booking-3.png" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
